# PSDCodec

./: .gitignore  AGENTS.md  README.md  STRUCTURE.md  pyproject.toml
configs/experiments/: demo.yaml  train_psdcodec.yaml
data/processed/: demo_prepared_83c8c79e8b33.npz
docs/notes/: output.txt
notebooks/: demo_deploy.ipynb  demo_eval.ipynb  deployment_example.ipynb
reports/benchmarks/: demo_eval.json  demo_eval.md
scripts/jobs/: prepare_campaign_dataset.py  recover_codec_export.py  train_codec.py  train_demo.py
scripts/tools/: demo_eval.py
src/codec/: __init__.py  arithmetic.py  config.py  entropy.py  exceptions.py  packetization.py  preprocessing.py  quantization.py  torch_preprocessing.py  types.py
src/data/: __init__.py  campaigns.py  datasets.py
src/infra/: __init__.py
src/interfaces/: __init__.py  api.py  demo_animation.py  deployment.py  evaluation.py  export.py
src/models/: __init__.py  base.py  reference.py  torch_backend.py
src/objectives/: __init__.py  distortion.py  training.py
src/pipelines/: __init__.py  runtime.py  training.py
src/psdcodec.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/utils/: __init__.py  arrays.py
temp/: DEPLOYMENT_BOUNDARY.md
tests/integration/: conftest.py  test_deployment.py  test_deployment_analysis.py  test_evaluation.py  test_runtime.py  test_training.py
tests/specs/: test_campaigns.py  test_data.py  test_demo_animation.py  test_demo_config.py  test_entropy.py  test_evaluation_notebook.py  test_objectives.py  test_packetization.py  test_preprocessing.py  test_torch_backend.py  (+1 more)
(+35 files in other folders)
